# python-portable-device

./: .gitignore  pyproject.toml  readme.md
doc/: todo.md
src/portable_device/: __init__.py  device.py  object.py  object_list.py
src/portable_device/cli/: app.py  cli.py
src/portable_device/exceptions/: __init__.py  ambiguous_device.py  ambiguous_object.py  device_not_found.py  object_not_found.py
tests/: fixtures.py  test_device.py  test_object.py  test_object_list.py
